0023626: It's impossible to open files containing localisation characters in the name

Files containing localisation characters can be opened and saved now properly.